# go-backend/internal/endpoints/user-status-endpoints/update-location.go
@@ -2,6 +2,7 @@ package userstatusendpoints
 
 import (
 	"encoding/json"
+	"fmt"
 	"net/http"
 
 	"github.com/ZephLevy/Safe-return-backend/internal/auth"
@@ -16,7 +17,24 @@ type locationRequest struct {
 	Time      string `json:"time"`
 }
 
+type locationResponse struct {
+	Response string `json:"response"`
+}
+
 // registerUserLocationHandler sets up listening for location
+//
+// @Summary Updates the last known location of a user
+// @Description Inserts a locationRequest into the db describing location, accuracy, speed, and time
+// @Tags User-status
+// @Accept application/json
+// @Produce application/json
+// @Param request body locationRequest true "Location updater request payload"
+// @Success 201 {object} locationResponse "Location updated successfully"
+// @Failure 405 {object} httputils.ErrorResponse "Method not allowed"
+// @Failure 401 {object} httputils.ErrorResponse "Unauthorized - see error message for more detail"
+// @Failure 400 {object} httputils.ErrorResponse "Bad Request"
+// @Security BearerAuth
+// @Router /user-status/update-location [post]
 func registerUserLocationHandler() {
 	locationHandler := http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 
@@ -35,9 +53,13 @@ func registerUserLocationHandler() {
 			return
 		}
 
-		// TODO: Actually respond in JSON
-		w.WriteHeader(http.StatusOK)
-		w.Write([]byte(userID))
+		fmt.Println(userID)
+
+		// TODO: Save the location in the db
+		w.WriteHeader(http.StatusCreated)
+		json.NewEncoder(w).Encode(locationResponse{
+			Response: "Location updated successfully",
+		})
 	})
 
 	http.Handle("/user-status/update-location", auth.AuthMiddleware(locationHandler))
